# srpy

./: README.md  pyproject.toml
docs/: conf.py
srpy/: core.py  docs.py  git.py
